<resources>
    <string name="app_name">Sparikin2</string>
    <string name="tvMatrixSize">Matrix size</string>
    <string name="tvThreadsCount">Threads count</string>
    <string name="btnExecute">Execute</string>
    <string name="btnStop">Stop</string>
    <string name="GausingBlur">Gaus blur</string>
    <string name="rbBoxBlur">Box blur</string>
    <string-array name="threadsCount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>